--- a/index.html
+++ b/index.html
@@ -351,25 +351,19 @@
           <p class="lead">
             I ship placeholder text here, and I will edit this later when i feel
             like it. However I need this text to be long enough to test some
-            stuff so: <br />Hey guys, did you know that in terms of male human
-            and female Pokémon breeding, Vaporeon is the most compatible Pokémon
-            for humans? Not only are they in the field egg group, which is
-            mostly comprised of mammals, Vaporeon are an average of 3”03’ tall
-            and 63.9 pounds, this means they’re large enough to be able handle
-            human d*cks, and with their impressive Base Stats for HP and access
-            to Acid Armor, you can be rough with one. Due to their mostly water
-            based biology, there’s no doubt in my mind that an aroused Vaporeon
-            would be incredibly wet, so wet that you could easily have sex with
-            one for hours without getting sore. They can also learn the moves
-            Attract, Baby-Doll Eyes, Captivate, Charm, and Tail Whip, along with
-            not having fur to hide nipples, so it’d be incredibly easy for one
-            to get you in the mood. With their abilities Water Absorb and
-            Hydration, they can easily recover from fatigue with enough water.
-            No other Pokémon comes close to this level of compatibility. Also,
-            fun fact, if you pull out enough, you can make your Vaporeon turn
-            white. Vaporeon is literally built for human d*ck. Ungodly defense
-            stat+high HP pool+Acid Armor means it can take c*ck all day, all
-            shapes and sizes and still come for more
+            stuff so: <br />Lorem ipsum dolor sit amet, consectetur adipiscing
+            elit. Cras non ipsum sit amet elit commodo tincidunt eu id orci.
+            Donec ornare turpis eget nunc finibus mattis. Morbi quis elit in
+            nunc euismod iaculis. Maecenas egestas odio a elementum interdum.
+            Aliquam pharetra nunc nunc, ac posuere urna porttitor bibendum.
+            Nullam dignissim pulvinar sem, at posuere eros gravida et. Quisque
+            pellentesque cursus rutrum. Vivamus est elit, consequat quis felis
+            sit amet, accumsan congue nibh. Aenean sit amet massa vitae elit
+            rutrum feugiat. Sed eu posuere metus, malesuada iaculis nibh.
+            Quisque consequat dolor at justo gravida mollis. Sed quis egestas
+            dui, sit amet sodales velit. Mauris et tellus id dui ullamcorper
+            tristique. Maecenas tincidunt tincidunt libero sit amet porta. Nulla
+            facilisi.
           </p>
           <div class="cta">
             <a class="button" href="./contact.html">Contact</a>
